# sig_topo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
demo/: index.html
doc/: architecture.md  cascades.md  composition.md  ddl.md  ffi.md  getting-started.md  guards.md  persistence.md  plan.md  roadmap.md  run.md  scenarios.md  shell.md  tracing.md  transaction.md  visualization.md  wasm.md  想法起点--汇总.md
examples/: cascade_topology.json  gate_flow.json  gate_flow.md  order_approval.ddl  order_approval.json  order_approval.md
examples/components/: breaker.json  house.json  lockable.json
examples/ffi/: run.sh  test.c  test.py
examples/scenarios/ddl_expressiveness/: EXPECTED.md  ddl_expressiveness.ddl  ddl_expressiveness.scenario.json
examples/scenarios/fail_rollback/: EXPECTED.md  fail_rollback.ddl  fail_rollback.scenario.json
include/: signal_topology.h
src/: check.rs  compose.rs  engine.rs  error.rs  ffi.rs  lib.rs  persist.rs  run.rs  schema.rs  trace.rs  watch.rs
src/ddl/: codegen.rs  lexer.rs  mod.rs  parser.rs
src/export/: dot.rs  mod.rs  render.rs
src/guard/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  token.rs
tests/: cascade_test.rs  cascade_transaction_test.rs  compose_test.rs  ddl_test.rs  dot_export_test.rs  ffi_test.rs  fork_join_test.rs  guard_test.rs  integration_test.rs  on_fail_test.rs  persist_test.rs  reaction_guard_test.rs  scenarios_test.rs  snapshot_dot_test.rs  stc_check_test.rs  stc_watch_test.rs  sts_dot_ext_test.rs  sts_fail_command_test.rs  sts_scenarios_test.rs  sts_test.rs  sts_why_test.rs  stt_fail_scenario_test.rs  topology.json  trace_test.rs  transaction_test.rs
tests/fixtures/: breaker.json  cycle_a.json  cycle_b.json  dup_inc.json  dup_main.json  include_missing.json  lockable.json  main_ok.json  notify.json  reaction_guard.ddl  reaction_guard_block.ddl  scenario_fail_inject.json  scenario_success.json  trans_a.json  trans_b.json  trans_c.json
wasm-topology/: Cargo.toml  build.sh
wasm-topology/src/: lib.rs
(+27 files in other folders)
