[package]
name = "signal-topology"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stv"
path = "src/bin/stv.rs"

[[bin]]
name = "stt"
path = "src/bin/stt.rs"

[[bin]]
name = "stp"
path = "src/bin/stp.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"