[workspace]
members = [".", "wasm-topology"]

[package]
name = "signal-topology"
version = "1.0.0"
edition = "2021"

[lib]
name = "signal_topology"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "stv"
path = "src/bin/stv.rs"

[[bin]]
name = "stt"
path = "src/bin/stt.rs"

[[bin]]
name = "stp"
path = "src/bin/stp.rs"

[[bin]]
name = "sts"
path = "src/bin/sts.rs"

[[bin]]
name = "stc"
path = "src/bin/stc.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"